Vokabel-Import-Export in eigene Unterseite verschoben und im Menü verlinkt.

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
                                 vocabulary</a></li>
                             <li><a href="/documents/PONS_Niederlaendisch_Lektionswortschatz.pdf" target="_blank">
                                 <span class="glyphicon glyphicon-save"></span> PONS Vocabulary</a></li>
+                            <li><a href="#/importexport"><span class="glyphicon glyphicon-import"></span> Import - Export</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -106,6 +107,7 @@
 <script src="scripts/services/uuid.js"></script>
 
 <script src="scripts/controllers/showvocabulary.js"></script>
+<script src="scripts/controllers/importexportentries.js"></script>
 <script src="scripts/controllers/learnvocabulary.js"></script>
 <script src="scripts/controllers/editentry.js"></script>
 
