--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,17 @@
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
+                <ul class="nav navbar-nav">
+                    <li><a href="#/showvocabulary"><span class="glyphicon glyphicon-list-alt"></span> Show
+                        vocabulary</a></li>
+                </ul>
+
+                <!-- Hauptmenü: Learning -->
+                <ul class="nav navbar-nav">
+                    <li><a href="#/learnvocabulary"><span class="glyphicon glyphicon-cloud-upload"></span> Learn</a>
+                    </li>
+                </ul>
+
                 <!-- Hauptmenü: Vocabulary -->
                 <ul class="nav navbar-nav">
                     <li class="dropdown" dropdown>
@@ -45,18 +56,6 @@
                             <li><a href="/documents/PONS_Niederlaendisch_Lektionswortschatz.pdf" target="_blank">
                                 <span class="glyphicon glyphicon-save"></span> PONS Vocabulary</a></li>
                             <li><a href="#/importexport"><span class="glyphicon glyphicon-import"></span> Import - Export</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <!-- Hauptmenü: Learning -->
-                <ul class="nav navbar-nav">
-                    <li class="dropdown" dropdown>
-                        <a href="#" class="dropdown-toggle" dropdown-toggle role="button">Learning <span
-                                class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#/learnvocabulary"><span class="glyphicon glyphicon-cloud-upload"></span> Learn</a>
-                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -112,6 +111,7 @@
 <script src="scripts/controllers/editentry.js"></script>
 
 <script src="scripts/services/learning.js"></script>
+<script src="scripts/directives/autofocus.js"></script>
 
 <script src="scripts/model/Entry.js"></script>
 <script src="scripts/model/Answer.js"></script>
