--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,27 @@
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
+                <ul class="nav navbar-nav">
+                    <li><a href="#/enternewword"><span class="glyphicon glyphicon-plus"></span> Add</a>
+                    </li>
+                </ul>
+
+                <ul class="nav navbar-nav">
+                    <li><a href="#/showvocabulary"><span class="glyphicon glyphicon-list-alt"></span> Search</a></li>
+                </ul>
+
+                <!-- Hauptmenü: Learning -->
+                <ul class="nav navbar-nav">
+                    <li><a href="#/learnvocabulary"><span class="glyphicon glyphicon-cloud-upload"></span> Learn</a>
+                    </li>
+                </ul>
+
+                <!-- Hauptmenü: Listening -->
+                <ul class="nav navbar-nav">
+                    <li><a href="http://de.forvo.com/word/" target="_blank">
+                        <span class="glyphicon glyphicon-music"></span> Listen</a>
+                </ul>
+
                 <!-- Hauptmenü: Vocabulary -->
                 <ul class="nav navbar-nav">
                     <li class="dropdown" dropdown>
@@ -47,23 +68,6 @@
                             <li><a href="#/importexport"><span class="glyphicon glyphicon-import"></span> Import - Export</a></li>
                         </ul>
                     </li>
-                </ul>
-
-                <ul class="nav navbar-nav">
-                    <li><a href="#/showvocabulary"><span class="glyphicon glyphicon-list-alt"></span> Show
-                        vocabulary</a></li>
-                </ul>
-
-                <!-- Hauptmenü: Learning -->
-                <ul class="nav navbar-nav">
-                    <li><a href="#/learnvocabulary"><span class="glyphicon glyphicon-cloud-upload"></span> Learn</a>
-                    </li>
-                </ul>
-
-                <!-- Hauptmenü: Listening -->
-                <ul class="nav navbar-nav">
-                    <li><a href="http://de.forvo.com/word/" target="_blank">
-                        <span class="glyphicon glyphicon-music"></span> http://de.forvo.com</a>
                 </ul>
 
             </div>
