--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
 
 <script src="scripts/model/Entry.js"></script>
 <script src="scripts/model/Answer.js"></script>
+<script src="scripts/services/databasemodel.js"></script>
 <script src="scripts/services/localdatabase.js"></script>
 <script src="scripts/services/constants.js"></script>
 <script src="scripts/services/vocabularyresource.js"></script>
