--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,8 @@
 <script src="scripts/controllers/editentry.js"></script>
 
 <script src="scripts/services/learning.js"></script>
+<script src="scripts/services/entryselection.js"></script>
+<script src="scripts/services/entrystructure.js"></script>
 <script src="scripts/directives/autofocus.js"></script>
 
 <script src="scripts/model/Entry.js"></script>
